# Ro-Arm24

./: README.md
esp32/esp32-2.0.11/esp32/hardware/esp32/2.0.11/: installed.json
src/roarm_main/roarm_description/config/: joint_names_roarm.yaml
src/roarm_main/roarm_description/launch/: display.launch.py
src/roarm_main/roarm_description/urdf/: roarm_description.csv  roarm_description_web_app.urdf
study/Hankyu_Kim/: week3.md  week5.md  week6.md
study/Jaewook_Jung/: week1.md  week10.md  week14.md  week3.md  week4.md  week5.md  week6.md
study/Jaewook_Jung/src/roarm_camera/: CMakeLists.txt  package.xml
study/Jaewook_Jung/src/roarm_camera/config/: params.yaml
study/Jaewook_Jung/src/roarm_camera/include/roarm_camera/: roarm_camera_node.hpp
study/Jaewook_Jung/src/roarm_camera/src/: main.cpp  roarm_camera_node.cpp
study/SeungCheolShin/: 5. Control the Robotic Arm with Keyboard.pptx  Arduino IDE 설치.txt  CmdHttp.py  CmdSerial.py  Roarm WIFI 설정.txt  VMWare ROS2 환경.txt
study/hyoyeon/: progress.txt
study/hyoyeon/ROS2_tutorial/: 01_topic.txt  02_service.txt  03_action.txt  04_parameter.txt  05_wrapup.txt  06_CLI.txt  07_UI
study/robert/: Weeks05.md  Weeks06.md  정리.md
study/youngjun/: .~lock.2주차.odt#  1주차.odt  2주차.odt  READ_ME  cam2ros.py  face_tracking.py
