<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>roarm_camera</name>
  <version>0.0.0</version>
  <description>Camera node for roarm</description>
  <maintainer email="m6488j@naver.com">jwj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>v4l-utils</depend>
  <depend>yaml-cpp</depend>
  <depend>OpenCV</depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
